--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="right-footer">
             <div class="top-sec">
                 <div class="logo">
-                    <img src="images/logo.PNG" alt="">
+                    <img src="images/logo.svg" alt="">
                 </div>
                 <div class="desc">Professional decor Studio</div>
             </div>
